--------------------------------------------------------------------------------
Fusion 1.209 - January ??. 20003
--------------------------------------------------------------------------------
- 12-28-03: Added cast times for Increase/Decrease AGI (1 second). [Colus]
- 12-27-03: Fixed code for Tunnel Drive Data. Waiting on Data. [AlexKreuz]
- 12-27-03: Modified Skill_DB Format for correct Skill Requirements. [AlexKreuz]
- 12-27-03: Fixed LockItem / Switch Items on Refine NPC Bug. [AlexKreuz]
- 12-27-03: Fixed DirMove function. [AlexKreuz]
- 12-27-03: Monsters dont attack through walls anymore. [AlexKreuz]
- 12-27-03: Added MaxUsers Exception for GM Type Accounts. [AlexKreuz]
- 12-27-03: Updated GAT Type Map reading algorithm. [AlexKreuz]
- 12-27-03: Finger Offensive can not be shot through wall anymore. [AlexKreuz]
- 12-27-03: Fixed Players can not attack through walls anymore. [AlexKreuz]
- 12-27-03: Added AttackPath functions. [AlexKreuz]
- 12-27-03: Fixed Incorrect Map formatting (1s -> 0s, 0s -> 1s). [AlexKreuz]
- 12-26-03: Fixed Cart Items duplicate bug. [AlexKreuz]
- 12-26-03: Fixed Frost Nova does 35000 (0) damage. [AlexKreuz]
- 12-26-03: Fixed Card with skills in clip gives extra skill points. [AlexKreuz]
- 12-26-03: Fixed Some skills (Inc AGI) Icons were showing on caster, not target. [Michen]
- 12-26-03: Fixed Decrease AGI stacking bug. [AlexKreuz]
- 12-26-03: Added "#kick charaname" command. [AlexKreuz]
- 12-26-03: Added "#ban charaname" command. [AlexKreuz]
- 12-26-03: Fixed Empelium can be hit by LoV/Storm Gust without guild. [AlexKreuz]
- 12-26-03: Added #banish when the user is offline. [AlexKreuz]

---------------------------------------------------------------------------------
Fusion 1.208 - December 25th, 2003
--------------------------------------------------------------------------------
- 12-24-03: Fixed Bug with Blitz beat Auto Disconnecting people (bad dmg calc?). [Oatmeal12345]