@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
 Fusion 1.209 - January ??. 20003
 --------------------------------------------------------------------------------
+- 12-29-03: Added Console Command "-save" for saving DBs. [AlexKreuz]
+- 12-29-03: Added Console Command "-reload" for reloading DBs. [AlexKreuz]
 - 12-28-03: Added cast times for Increase/Decrease AGI (1 second). [Colus]
 - 12-27-03: Fixed code for Tunnel Drive Data. Waiting on Data. [AlexKreuz]
 - 12-27-03: Modified Skill_DB Format for correct Skill Requirements. [AlexKreuz]
